<resources>
    <string name="utilslib_app_name">utils_library</string>
    
    <!-- iconfont lib -->
    <!-- arraw of all directions -->
    <string name="utilslib_icon_arraw_down">&#xe601;</string>
    <string name="utilslib_icon_arraw_left">&#xe602;</string>
    <string name="utilslib_icon_arraw_up">&#xe603;</string>
    <string name="utilslib_icon_arraw_right">&#xe604;</string>
    
    <!-- login and account -->
    <string name="utilslib_icon_account">&#xe606;</string>
    <string name="utilslib_icon_password">&#xe607;</string>
    <string name="utilslib_icon_password2">&#xe60a;</string>
    <string name="utilslib_icon_phone">&#xe605;</string>
    <string name="utilslib_icon_sms">&#xe608;</string>
    
    <!-- network problem -->
    <string name="utilslib_icon_network_problem">&#xe60d;</string>
    <string name="utilslib_icon_network_failed">&#xe60c;</string>
    
    <!-- load failed and retry -->
    <string name="utilslib_icon_no_data">&#xe609;</string>
    
    <!-- location -->
    <string name="utilslib_icon_location">&#xe60b;</string>
    
    
    <string name="utilslib_common_net_unavaiable">网络连接不可用</string>
    <string name="utilslib_common_loading">正在加载</string>
    <string name="utilslib_common_nodata">暂无数据</string>
    
    <string name="utilslib_common_data_reload">请求失败，请点击重试</string>
    <string name="utilslib_common_data_reloading">正在尝试连接</string>
    
    <string name="utilslib_common_error_nosdcard">没有SD卡，无法存储录音数据</string>
    <string name="utilslib_common_video_download_failed">视频下载失败</string>
    <string name="utilslib_common_image_loadfaild">图片加载失败</string>
    <string name="utilslib_common_error_downloadfile">附件打开失败!</string>
    <string name="utilslib_common_error_openfile">附件打开失败!</string>
    
    <string name="utilslib_common_media_video">视频</string>
    <string name="utilslib_common_media_photo">拍照</string>
    <string name="utilslib_common_media_audio">录音</string>
    <string name="utilslib_common_media_gallery">从相册选择</string>
    
    <string name="utilslib_user_name">请输入用户名</string>
    <string name="utilslib_user_name_phone">请输入手机号</string>
    <string name="utilslib_user_pass">请输入密码</string>
    <string name="utilslib_user_register">注册账号</string>
    <string name="utilslib_user_find_pass">找回密码</string>
    <string name="utilslib_user_login">登录</string>
    <string name="utilslib_common_version_text">版本:%1s</string>
    <string name="utilslib_common_net_failed">网络异常，请检查网络设置</string>
    <string name="utilslib_common_input_content_error">用户输入数据异常</string>
    <string name="utilslib_login_userinfo_null">用户名或者密码不能为空！</string>
    <string name="utilslib_common_check_phonenumber">请输入正确手机号码！</string>
    <string name="utilslib_login_password_min">密码长度需要大于6位</string>
    <string name="utilslib_user_phone">手机号</string>
    <string name="utilslib_user_vali">验证码</string>
    <string name="utilslib_user_vali_send_vali">发送验证码</string>
    <string name="utilslib_user_vali_get_vali">获取验证码</string>
    <string name="utilslib_user_vali_resend">重新发送</string>
    <string name="utilslib_user_vali_count_resend">%1s秒重新发送</string>
    <string name="utilslib_register_title">用户注册</string>
    <string name="utilslib_userinfo_title">补全信息</string>
    <string name="utilslib_register_complete">注 册</string>
    <string name="utilslib_check_phonenumber">请输入正确手机号码！</string>
    <string name="utilslib_regist_userinfo_vali_null">请输入验证码！</string>
    <string name="utilslib_valicode_error">获取校验验证码失败</string>
    <string name="utilslib_register_check_password">确认密码</string>
    <string name="utilslib_register_commit">提交</string>
    <string name="utilslib_password_different">输入的两次密码不一致！</string>
    <string name="utilslib_common_search">搜索</string>
    
    <!-- 列表刷新 -->
    <string name="utilslib_listfooterview_normal">查看更多</string>
    <string name="utilslib_listfooterview_ready">松开载入更多</string>
    
    
   
    
    
    
    <!-- 图片 -->
    <string name="utilslib_icon_common_nodata"></string>

    <!-- 图片浏览 -->
    <string name="utilslib_viewpager_indicator">%1$d/%2$d</string>
    
    <!-- 手势密码 -->
    <string name="utilslib_gesturepass_pass2short">密码太短或太长，请重新绘制</string>
    <string name="utilslib_gesturepass_drawagain">再次确认绘制</string>
    <string name="utilslib_gesturepass_drawasuccess">设置成功</string>
    <string name="utilslib_gesturepass_check_faile">两次绘制不匹配！</string>
    <string name="utilslib_gesturepass_draw_succ">输入正确</string>
    <string name="utilslib_gesturepass_draw_failed">输入错误</string>
    <string name="utilslib_gesturepass_please_setting">请设置密码！</string>
    <string name="utilslib_gesturepass_please_input">请输入密码！</string>
    
    <!-- 录音 -->
    <string name="utilslib_audiorecoder_state_record_error">正在录音中，请先停止录音</string>
    <string name="utilslib_audiorecoder_unknown_type">无法识别的错误</string>
    
    
    <string name="utilslib_toasty_message">toasty_message</string>
    
</resources>