<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/utils_popup_media_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/utils_popup_media_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/utilslib_common_media_video"
            android:textColor="@color/utilslib_text_black3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/utilslib_lines_color" />

        <TextView
            android:id="@+id/utils_popup_media_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/utilslib_common_media_audio"
            android:textColor="@color/utilslib_text_black3"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/utilslib_lines_color" />

        <TextView
            android:id="@+id/utils_popup_media_takephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/utilslib_common_media_photo"
            android:textColor="@color/utilslib_text_black3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/utilslib_lines_color" />

        <TextView
            android:id="@+id/utils_popup_media_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/utilslib_common_media_gallery"
            android:textColor="@color/utilslib_text_black3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/utilslib_lines_color" />

        <TextView
            android:id="@+id/utils_popup_media_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@android:string/cancel"
            android:textColor="@color/utilslib_text_black3"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>